--- a/projeto/emprestimo/templates/emprestimo_contrato.html
+++ b/projeto/emprestimo/templates/emprestimo_contrato.html
@@ -154,7 +154,7 @@ window.onload = function imprimir(){
         </p>
 
         <p class="fontmenor">
-        <b>CLÁUSULA 2ª</b> - Que a quantia acima emprestada, parcelada, deverá ser adimplida ao CREDOR no dia de acordo com tabela abaixo:
+        <b>CLÁUSULA 2ª</b> - Que a quantia acima emprestada, parcelada, deverá ser adimplida ao <b>CREDOR</b> no dia de acordo com tabela abaixo:
         </p>
     `
     +
@@ -214,7 +214,7 @@ window.onload = function imprimir(){
         <p class="fontmenor" >
             <b>CLÁUSULA 3ª</b> - Na falta do pagamento do empréstimo na data aprazada, o <b>DEVEDOR</b> pagará uma multa no percentual de 
             2% mais juros moratório sobre o débito no percentual de 0.66%, por dia, acrescido de correção monetária sobre o montante 
-            apurado, ficando o CREDOR com direito de tomar as medidas judiciais cabíveis, inclusive a penhora judicial e conseguinte 
+            apurado, ficando o <b>CREDOR</b> com direito de tomar as medidas judiciais cabíveis, inclusive a penhora judicial e conseguinte 
             notificação e negativação nos órgãos de proteção creditícios SPC, SERASA, SCPC e afins, conforme art. 43 do estatuto 
             consumerista.
         </p>
