Numeração de paginas refeita+

--- a/projeto/emprestimo/templates/emprestimo_contrato.html
+++ b/projeto/emprestimo/templates/emprestimo_contrato.html
@@ -184,7 +184,7 @@ window.onload = function imprimir(){
                 <b>PARCELAS</b>
             </td>
             <td width="33%">
-                <<b>VENCIMENTO</b>
+                <b>VENCIMENTO</b>
             </td>
             <td width="39%">
                 <b>VALOR</b>
