Nome e cpf de avalista incluso na promissoria+

--- a/projeto/emprestimo/templates/emprestimo_promissoria.html
+++ b/projeto/emprestimo/templates/emprestimo_promissoria.html
@@ -217,7 +217,7 @@ window.onload = function imprimir(){
         <div class="body">
             <a class="test1">&nbsp</a>
             <a class="test1">&nbsp&nbsp&nbsp&nbspAvalista(s)</a>
-            <a class="test1"> ${"{{object.cliente.avalista.avalista}}"} CPF:${"{{object.cliente.avalista.cpf_avalista}}"} </a>
+            <a class="test1"> ${"{{object.cliente.avalista}}"} CPF:${"{{object.cliente.avalista.cpf_avalista}}"} </a>
             <a class="test1">_____________________________ &nbsp&nbsp&nbsp</a>
             <a class="ait"> 
                 <b class = "fontmaior" >&nbspNº</b>                 
