--- a/projeto/emprestimo/templates/emprestimo_form.html
+++ b/projeto/emprestimo/templates/emprestimo_form.html
@@ -23,7 +23,7 @@
     <div class="row">
         <div class="col-sm-3">                    
             <div class="form-group" >                
-                <label for="" class="required" >{{form.funcionario.label}} </label>                
+                <label for="">{{form.funcionario.label}} </label>
                 {% render_field form.funcionario class="form-control" %}
             </div>
         </div>
