--- a/projeto/core/templates/includes/nav.html
+++ b/projeto/core/templates/includes/nav.html
@@ -1,30 +1,6 @@
 <!-- https://github.com/JTruax/bootstrap-starter-template/blob/master/template/start.html -->
 
-<!-- <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-    <a class="navbar-brand" href="#">ESCTOP</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
 
-    <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-                <a class="nav-link" href="{% url 'core:index' %}">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="{% url 'cliente:cliente_list' %}">Clientes</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="{% url 'emprestimo:emprestimo_list' %}">Emprestimos</a>
-            </li>
-            
-            <li class="nav-item dropdown">
-               
-            </li>
-        </ul>
-    </div>
-</nav>
--->
 
 <html>
 <head>
@@ -95,15 +71,19 @@ body {
 <body>
 
 <div class="topnav" id="myTopnav">
-  <a href="{% url 'core:index' %}" class="active">ESCTOP</a>
-  <a href="{% url 'cliente:cliente_list' %}">Clientes</a>
-  <a href="{% url 'emprestimo:emprestimo_list' %}">Empréstimos</a>
-  <a href="{% url 'cliente:avalista_list' %}">Avalista</a>
-  
-  
-  <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+    <a href="{% url 'core:index' %}" class="active">ESCTOP</a>
+    <a href="{% url 'cliente:cliente_list' %}">Clientes</a>
+    <a href="{% url 'emprestimo:emprestimo_list' %}">Empréstimos</a>
+    <a href="{% url 'cliente:avalista_list' %}">Avalista</a>
+	
+    <a href="{% url 'logout' %}">Encerrar</a>
+
+
+
+
+    <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
-  </a>
+    </a>
 </div>
 
 <div style="padding-left:16px">
@@ -124,3 +104,28 @@ function myFunction() {
 </body>
 </html>
 
+<!-- <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
+    <a class="navbar-brand" href="#">ESCTOP</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+                <a class="nav-link" href="{% url 'core:index' %}">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'cliente:cliente_list' %}">Clientes</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'emprestimo:emprestimo_list' %}">Emprestimos</a>
+            </li>
+            
+            <li class="nav-item dropdown">
+               
+            </li>
+        </ul>
+    </div>
+</nav>
+-->
