--- a/projeto/core/templates/registration/login.html
+++ b/projeto/core/templates/registration/login.html
@@ -4,7 +4,7 @@
 {% block content %}
 
 {% if form.errors %}
-<p>Your username and password didn't match. Please try again.</p>
+    <p>Seu usuário ou senha não estão corretos. Tente novamente.</p>
 {% endif %}
 
 {% if next %}
@@ -12,7 +12,7 @@
     <p>Your account doesn't have access to this page. To proceed,
     please login with an account that has access.</p>
     {% else %}
-    <p>Please login to see this page.</p>
+    <p>Faça login para acessar o sistema</p>
     {% endif %}
 {% endif %}
 
@@ -34,7 +34,7 @@
 </form>
 
 {# Assumes you setup the password_reset view in your URLconf #}
-<p><a href="{% url 'password_reset' %}">Lost password?</a></p>
+<p><a href="{% url 'password_reset' %}">Esqueceu sua senha?</a></p>
 
 {% endblock content %}
 
