--- a/projeto/core/templates/includes/nav.html
+++ b/projeto/core/templates/includes/nav.html
@@ -71,15 +71,15 @@ body {
 <body>
 
 <div class="topnav" id="myTopnav">
-    <a href="{% url 'core:index' %}" class="active">ESCTOP</a>
+    <a href="{% url 'core:index' %}" class="active" class="nav-link">ESCTOP</a>
     <a href="{% url 'cliente:cliente_list' %}">Clientes</a>
     <a href="{% url 'emprestimo:emprestimo_list' %}">Empréstimos</a>
     <a href="{% url 'cliente:avalista_list' %}">Avalista</a>
-	
-    <a href="{% url 'logout' %}">Encerrar</a>
 
-
-
+	{% if user.is_authenticated %}
+    	<a href="{% url 'logout' %}" style='float:right'>Encerrar Sessão</a>
+		<a href="" style='float:right' class="nav-link disabled" >Olá, {{user}}</a>
+	{% endif %}
 
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
