Commit para fazer testes no funcionário deletado

--- a/projeto/core/templates/registration/login.html
+++ b/projeto/core/templates/registration/login.html
@@ -1,7 +1,4 @@
-{% extends "base.html" %}
-{% load static %}
-
-{% block content %}
+{% block menu %}
 
 {% if form.errors %}
     <p>Seu usuário ou senha não estão corretos. Tente novamente.</p>
@@ -36,5 +33,5 @@
 {# Assumes you setup the password_reset view in your URLconf #}
 <p><a href="{% url 'password_reset' %}">Esqueceu sua senha?</a></p>
 
-{% endblock content %}
+{% endblock menu %}
 
