--- a/projeto/emprestimo/templates/emprestimo_form.html
+++ b/projeto/emprestimo/templates/emprestimo_form.html
@@ -24,7 +24,7 @@
         <div class="col-sm-3">                    
             <div class="form-group" >                
                 <label for="">{{form.funcionario.label}} </label>
-                {% render_field form.funcionario class="form-control" %}
+                {% render_field form.funcionario class="form-control" id="funcionario" value="2" %}
             </div>
         </div>
         <div class="col-sm-3"> 
@@ -97,6 +97,12 @@
             var s = n1*n2
             document.getElementById('prestacao').value = s
         }
+
+        function userfunction{
+            var funcionario = document.getElementById('funcionario')
+        }
+
+
     </script>
 {% endblock content %}
 
