--- a/projeto/emprestimo/templates/emprestimo_form.html
+++ b/projeto/emprestimo/templates/emprestimo_form.html
@@ -24,7 +24,7 @@
         <div class="col-sm-3">                    
             <div class="form-group" >                
                 <label for="">{{form.funcionario.label}} </label>
-                {% render_field form.funcionario class="form-control" id="funcionario" value="2" %}
+                {% render_field form.funcionario class="form-control" id="funcionario" %}
             </div>
         </div>
         <div class="col-sm-3"> 
@@ -36,7 +36,7 @@
         <div class="col-sm-3">
             <div class="form-group">
                 <label for="">{{form.cliente.label}}</label>
-                {% render_field form.cliente type="text" class="form-control" %}                       
+                {% render_field form.cliente type="text" class="form-control" %}
             </div>
         </div>
         <div class="col-sm-3"> 
