--- a/projeto/emprestimo/templates/emprestimo_form.html
+++ b/projeto/emprestimo/templates/emprestimo_form.html
@@ -21,12 +21,12 @@
     {% csrf_token %}
 
     <div class="row">
-        <div class="col-sm-3">                    
+        <!-- <div class="col-sm-3">                    
             <div class="form-group" >                
                 <label for="">{{form.funcionario.label}} </label>
-                {% render_field form.funcionario class="form-control" id="funcionario" %}
+                {% render_field form.funcionario class="form-control"  %}
             </div>
-        </div>
+        </div> -->
         <div class="col-sm-3"> 
             <div class="form-group">
                 <label for="">{{form.num_doc.label}}</label>
@@ -97,11 +97,6 @@
             var s = n1*n2
             document.getElementById('prestacao').value = s
         }
-
-        function userfunction{
-            var funcionario = document.getElementById('funcionario')
-        }
-
 
     </script>
 {% endblock content %}
