--- a/projeto/core/templates/base.html
+++ b/projeto/core/templates/base.html
@@ -17,7 +17,7 @@
 <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.css' %}"> 
 
 <!-- jQuery UI CSS -->
-
+<!-- pesquise se vai fazer falta -->
 
 <!-- Font-awesome -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
