--- a/projeto/core/templates/registration/login.html
+++ b/projeto/core/templates/registration/login.html
@@ -1,37 +1,96 @@
-{% block menu %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+    <title>Document</title>
+    <style>
+        .content {
+            padding-top: 30px;
+            padding-bottom: 30px;
+            width: 80%;
+            margin-top: 25px;
+            background-color: gray;
+            margin: auto;
+        }
+        
+        body{
+            padding-top: 150px;
 
-{% if form.errors %}
-    <p>Seu usuário ou senha não estão corretos. Tente novamente.</p>
-{% endif %}
+        }
 
-{% if next %}
-    {% if user.is_authenticated %}
-    <p>Your account doesn't have access to this page. To proceed,
-    please login with an account that has access.</p>
-    {% else %}
-    <p>Faça login para acessar o sistema</p>
+        .center {
+            margin: auto;
+            width: 50%;
+            border: 3px solid green;
+            padding: 10px;
+            text-align: center;
+        }       
+
+    </style>
+</head>
+<body>
+
+    
+    <div class="content">
+    {% if form.errors %}
+        <p style="color: red;">Seu usuário ou senha não estão corretos. Tente novamente.</p>
     {% endif %}
-{% endif %}
+    {% if next %}
+        {% if user.is_authenticated %}
+        <p>Your account doesn't have access to this page. To proceed,
+        please login with an account that has access.</p>
+        {% else %}
+        <p>Faça login para acessar o sistema</p>
+        {% endif %}
+    {% endif %}
+    
+    <form method="post" action="{% url 'login' %}">
+        {% csrf_token %}
+       
+            <div class="col-sm-4 center">                    
+                <div class="form-group">
+                    <a>{{ form.username.label_tag }}</a>
+                    <a>{{ form.username }}</a>
+                </div>
+            </div>
+            <div class="col-sm-4 center"> 
+                <div class="form-group">
+                   {{ form.password.label_tag }}
+                   {{ form.password }}
+                </div>
+            </div>
+      
+       
+            {% comment %} <tr>
+                <td>{{ form.username.label_tag }}</td>
+                <td>{{ form.username }}</td>
+            </tr>
+            <tr>
+                <td>{{ form.password.label_tag }}</td>
+                <td>{{ form.password }}</td>
+            </tr> {% endcomment %}
+       
+            <div class="col-sm-4 center"> 
+                <div class="form-group">
+                    <input type="submit" value="login">
+                    <input type="hidden" name="next" value="{{ next }}">
+                    {# Assumes you setup the password_reset view in your URLconf #}
+                    <p><a href="{% url 'password_reset' %}">Esqueceu sua senha?</a></p>
+                </div>
+            </div>
+    </form>
+    
 
-<form method="post" action="{% url 'login' %}">
-    {% csrf_token %}
-    <table>
-        <tr>
-            <td>{{ form.username.label_tag }}</td>
-            <td>{{ form.username }}</td>
-        </tr>
-        <tr>
-            <td>{{ form.password.label_tag }}</td>
-            <td>{{ form.password }}</td>
-        </tr>
-    </table>
+</div>
 
-    <input type="submit" value="login">
-    <input type="hidden" name="next" value="{{ next }}">
-</form>
 
-{# Assumes you setup the password_reset view in your URLconf #}
-<p><a href="{% url 'password_reset' %}">Esqueceu sua senha?</a></p>
+    
+</body>
+</html>
 
-{% endblock menu %}
+
+
 
