--- a/projeto/core/templates/registration/login.html
+++ b/projeto/core/templates/registration/login.html
@@ -8,26 +8,69 @@
     <title>Document</title>
     <style>
         .content {
-            padding-top: 30px;
+            padding-top: 0px;
             padding-bottom: 30px;
-            width: 80%;
-            margin-top: 25px;
-            background-color: gray;
+            width: 100%;
+            margin-top: 10px;
+            background-color: #f2f2f2;
             margin: auto;
         }
         
         body{
-            padding-top: 150px;
-
+            padding-top: 50px;
+            background-color: #f2f2f2;
         }
 
         .center {
             margin: auto;
             width: 50%;
-            border: 3px solid green;
+            border: 3px solid rgba(255, 255, 255, 0.932);
             padding: 10px;
             text-align: center;
-        }       
+            background-color: white;
+            border-radius: 13px;
+        }
+
+        input[type=text], select {
+            width: 100%;
+            padding: 12px 20px;
+            margin: 8px 0;
+            display: inline-block;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            box-sizing: border-box;
+        }
+        input[type=password], select {
+            width: 100%;
+            padding: 12px 20px;
+            margin: 8px 0;
+            display: inline-block;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            box-sizing: border-box;
+        }
+
+        input[type=submit] {
+            width: 100%;
+            background-color: #4CAF50;
+            color: white;
+            padding: 14px 20px;
+            margin: 8px 0;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+
+        input[type=submit]:hover {
+            background-color: #45a049;
+        }
+
+        div {
+            border-radius: 5px;
+            background-color: white;
+            padding: 20px;
+        }
+
 
     </style>
 </head>
@@ -50,37 +93,23 @@
     <form method="post" action="{% url 'login' %}">
         {% csrf_token %}
        
-            <div class="col-sm-4 center">                    
-                <div class="form-group">
+            <div class="col-sm-4 center">   
+                <div class="form-group">                
+                    <H2>CREEDCOOP</H2>                 
                     <a>{{ form.username.label_tag }}</a>
                     <a>{{ form.username }}</a>
+                
+                    <a>{{ form.password.label_tag }}</a>
+                    <a>{{ form.password }}</a>
                 </div>
-            </div>
-            <div class="col-sm-4 center"> 
                 <div class="form-group">
-                   {{ form.password.label_tag }}
-                   {{ form.password }}
-                </div>
-            </div>
-      
-       
-            {% comment %} <tr>
-                <td>{{ form.username.label_tag }}</td>
-                <td>{{ form.username }}</td>
-            </tr>
-            <tr>
-                <td>{{ form.password.label_tag }}</td>
-                <td>{{ form.password }}</td>
-            </tr> {% endcomment %}
-       
-            <div class="col-sm-4 center"> 
-                <div class="form-group">
-                    <input type="submit" value="login">
+                    <input type="submit" value="login" class="btn btn-success">
                     <input type="hidden" name="next" value="{{ next }}">
                     {# Assumes you setup the password_reset view in your URLconf #}
                     <p><a href="{% url 'password_reset' %}">Esqueceu sua senha?</a></p>
                 </div>
             </div>
+            
     </form>
     
 
