--- a/projeto/cliente/templates/cliente_detail.html
+++ b/projeto/cliente/templates/cliente_detail.html
@@ -2,15 +2,25 @@
 
 {% block content %}
 
-<a href="{% url 'cliente:cliente_list' %}">Voltar</a>
+<span class="pull-right">
+    <td style="text-align:center"> 
+        <a href="{% url 'cliente:cliente_list' %}">
+            <button type="button" class="btn btn-secondary">Voltar</button>
+        </a> 
+    </td>     
+    <td style="text-align:center"> 
+        <a href="{% url 'cliente:cliente_edit' object.pk %}" >
+            <button type="button" class="btn btn-info">Editar</button>
+        </a> 
+    </td> 
+    <td style="text-align:center"> 
+        <a href="{% url 'cliente:cliente_delete' object.pk %}" >
+            <button type="button" class="btn btn-danger">Deletar</button>
+        </a> 
+    </td> 
+</span>
 
 <h1>{{ object }}</h1>
-
-<!-- <span class="pull-right">
-    <a href="{% url 'cliente:cliente_list' %}" class="btn btn-primary">Voltar</a>
-    <a href="{% url 'cliente:cliente_delete' object.pk %}" class="btn btn-danger">Deletar</a>
-    <a href="{% url 'cliente:cliente_edit' object.pk %}" class="btn btn-success">Editar</a>    
-</span>   -->
 
 <div class="col-sm-6">
     <table class="table table-user-information">
@@ -20,56 +30,36 @@
                 <td>{{ object.nome }}</td>
             </tr>
             <tr>
-                <th class="text-right">Endereco</th>
-                <td>{{ object.endereco }}</td>
-            </tr>
-            <tr>
                 <th class="text-right">RG</th>
                 <td>{{ object.rg }}</td>
             </tr>
             <tr>
-                <th class="text-right">Data de nascimento</th>
-                <td>{{ object.data_nasc }}</td>
+                <th class="text-right">CPF</th>
+                <td>{{ object.cpf }}</td>
+            </tr>                      
+            <tr>
+                <th class="text-right">Telefone</th>
+                <td>{{ object.contato1 }}</td>
             </tr>
             <tr>
-                <th class="text-right">Anotacoes</th>
-                <td>{{ object.anotacoes }}</td>
+                <th class="text-right">Telefone</th>
+                <td>{{ object.contato2 }}</td>
+            </tr>
+            <tr>
+                <th class="text-right">Telefone</th>
+                <td>{{ object.celular1 }}</td>
+            </tr>
+            <tr>
+                <th class="text-right">Telefone</th>
+                <td>{{ object.celular2 }}</td>
             </tr>
             <tr>
                 <th class="text-right">E-mail</th>
                 <td>{{ object.email }}</td>
             </tr>
-            <tr>
-                <th class="text-right">CPF</th>
-                <td>{{ object.cpf }}</td>
-            </tr>
-            <tr>
-                <th class="text-right">Telefone</th>
-                <td>{{ object.num_telefone }}</td>
-            </tr>
             
         </tbody>
     </table>
 </div>
-
-
-<span class="pull-right">
-    <td style="text-align:center"> 
-        <a href="{% url 'cliente:cliente_list' %}">
-            <button class="button button5">Voltar</button>
-        </a> 
-    </td>     
-    <td style="text-align:center"> 
-        <a href="{% url 'cliente:cliente_edit' object.pk %}" >
-            <button class="button button2">Editar</button>
-        </a> 
-    </td> 
-    <td style="text-align:center"> 
-        <a href="{% url 'cliente:cliente_delete' object.pk %}" >
-            <button class="button button3">Deletar</button>
-        </a> 
-    </td> 
-</span>
-
 
 {% endblock content %}
