--- a/projeto/cliente/templates/cliente_list.html
+++ b/projeto/cliente/templates/cliente_list.html
@@ -5,7 +5,7 @@
 <div class="class page-header">
     <div class="float-right">
         <a href="{% url 'cliente:cliente_add' %}">
-            <button type="button" class="button button1">
+            <button type="button" class="btn btn-success">
                 Cadastrar Cliente
             </button>
         </a>       
@@ -18,27 +18,27 @@
     
     <table class="table table-striped table-hover">
         <thead class="thead">
-                <tr>
-                    <th>Nome</th>                    
-                    <th>RG</th>
-                    <th>Data de Nascimento</th>                                        
-                    <th>CPF</th>   
-                    <th></th>                                
-                </tr>
-            </thead>
-            <tbody>
-                {% for object in object_list  %}   
-                <tr>
-                    <td>{{object.nome}}</td>                                        
-                    <td>{{ object.rg }}</td>
-                    <td>{{ object.data_nasc }}</td>                                     
-                    <td>{{ object.cpf }}</td> 
-                    <td style="text-align:center"> 
-                        <a href="{{ object.get_absolute_url}}" ><button class="button button2">Gerenciar</button></a> 
-                    </td>                    
-                </tr>
-                {% endfor %}
-            </tbody>
+            <tr>
+                <th>Nome</th>                    
+                <th>RG</th>
+                <th>Data de Nascimento</th>                                        
+                <th>CPF</th>   
+                <th></th>                                
+            </tr>
+        </thead>
+        <tbody>
+            {% for object in object_list  %}   
+            <tr>
+                <td>{{object.nome}}</td>                                        
+                <td>{{ object.rg }}</td>
+                <td>{{ object.data_nasc }}</td>                                     
+                <td>{{ object.cpf }}</td> 
+                <td style="text-align:center"> 
+                    <a href="{{ object.get_absolute_url}}" ><button class="btn btn-info">Gerenciar</button></a> 
+                </td>                    
+            </tr>
+            {% endfor %}
+        </tbody>
         </table>
     {% else %}
         <p class="alert alert-warning">Sem Clientes cadastrados</p>
