Todos os botões padronizados

--- a/projeto/cliente/templates/avalista_list.html
+++ b/projeto/cliente/templates/avalista_list.html
@@ -11,7 +11,7 @@
 <div class="class page-header">   
     <div class="float-right">
         <a href="{% url 'cliente:avalista_add' %}">
-            <button type="button" class="button button1">
+            <button type="button" class="btn btn-success">
                 Cadastrar Avalista
             </button>
         </a>       
