--- a/projeto/emprestimo/templates/emprestimo_detail.html
+++ b/projeto/emprestimo/templates/emprestimo_detail.html
@@ -2,8 +2,39 @@
 
 {% block content %}
 
+<span class="pull-right">
+    <td style="text-align:center"> 
+        <a href="{% url 'emprestimo:emprestimo_list' %}">
+            <button type="button" class="btn btn-secondary">Voltar</button>
+        </a> 
+    </td> 
+    <td style="text-align:center"> 
+        <a href="{% url 'emprestimo:emprestimo_edit' object.pk %}">
+            <button type="button" class="btn btn-info">Editar</button>
+        </a> 
+    </td> 
+  
+    <td style="text-align:center"> 
+        <a href="{% url 'emprestimo:emprestimo_impress' object.pk %}">
+            <button type="button" class="btn btn-outline-warning">Carnê</button>
+        </a> 
+    </td> 
+    
+    <td style="text-align:center"> 
+        <a href="{% url 'emprestimo:emprestimo_promissoria' object.pk %}">
+            <button type="button" class="btn btn-outline-warning">Promissória</button>
+        </a> 
+    </td> 
+
+    <td style="text-align:center"> 
+        <a href="{% url 'emprestimo:emprestimo_contrato' object.pk %}">
+            <button type="button" class="btn btn-outline-warning">Contrato</button>
+        </a> 
+    </td> 
+</span>
+
 <a href="{% url 'emprestimo:emprestimo_list' %}">Voltar</a>
-<h1>Detalhes do Emprestimo de {{ object.cliente }}</h1>
+<h1>Emprestimo Nº {{ object.num_doc }}</h1>
 
 <div class="col-sm-6">
     <table class="table table-user-information">
@@ -40,30 +71,6 @@
         </tbody>
     </table>
 </div>
-<span class="pull-right">
-    <td style="text-align:center"> 
-        <a href="{% url 'emprestimo:emprestimo_edit' object.pk %}">
-            <button class="button button5">Editar</button>
-        </a> 
-    </td> 
-  
-    <td style="text-align:center"> 
-        <a href="{% url 'emprestimo:emprestimo_impress' object.pk %}">
-            <button class="button button2">Carnê</button>
-        </a> 
-    </td> 
-    
-    <td style="text-align:center"> 
-        <a href="{% url 'emprestimo:emprestimo_promissoria' object.pk %}">
-            <button class="button button2">Promissória</button>
-        </a> 
-    </td> 
 
-    <td style="text-align:center"> 
-        <a href="{% url 'emprestimo:emprestimo_contrato' object.pk %}">
-            <button class="button button2">Contrato</button>
-        </a> 
-    </td> 
-</span>
 
 {% endblock content %}
