--- a/projeto/emprestimo/templates/emprestimo_list.html
+++ b/projeto/emprestimo/templates/emprestimo_list.html
@@ -6,7 +6,7 @@
 
     <div class="float-right">
         <a href="{% url 'emprestimo:emprestimo_add' %}">
-            <button type="button" class="button button1">
+            <button type="button" class="btn btn-success">
                 Novo Empréstimo
             </button>
         </a>       
@@ -36,7 +36,7 @@
                     <td style="text-align:center">{{ object.qtd_parcelas }}x</td>  
                     <td style="text-align:center">{{ object.data_emprestimo|date:"d/m/Y" }}</td>  
                     <td style="text-align:center"> 
-                        <a href="{{ object.get_absolute_url}}" ><button class="button button2">Gerenciar</button></a> 
+                        <a href="{{ object.get_absolute_url}}" ><button class="btn btn-info">Gerenciar</button></a> 
                     </td> 
                     
                 </tr>
