Grupo de botões de impressão adicionados

--- a/projeto/emprestimo/templates/emprestimo_detail.html
+++ b/projeto/emprestimo/templates/emprestimo_detail.html
@@ -15,20 +15,30 @@
     </td> 
     
     <div class="btn-group" role="group" aria-label="Basic example">
-        <button type="button" class="btn btn-warning">
-            <a href="{% url 'emprestimo:emprestimo_impress' object.pk %}" style="text-align:center">
-            </a>Carnê
-        </button>
+        <a href="{% url 'emprestimo:emprestimo_impress' object.pk %}" type="button" class="btn btn-warning">Carnê</a>
+        <a href="{% url 'emprestimo:emprestimo_promissoria' object.pk %}" type="button" class="btn btn-warning">Promissória</a>
+        <a href="{% url 'emprestimo:emprestimo_contrato' object.pk %}" type="button" class="btn btn-warning">Contrato</a>
+        
+        
+        
+        <!-- <a href="{% url 'emprestimo:emprestimo_impress' object.pk %}">
+            <button type="button" class="btn btn-outline-warning" style="text-align:center">Carnê</button>
+        </a> 
     
-        <button type="button" class="btn btn-warning">
-            <a href="{% url 'emprestimo:emprestimo_promissoria' object.pk %}" style="text-align:center">
-            </a>Promissória
-        </button>
-    
-        <button type="button" class="btn btn-warning">
-            <a href="{% url 'emprestimo:emprestimo_contrato' object.pk %}" style="text-align:center">
-            </a>Contrato
-        </button>
+        <a href="{% url 'emprestimo:emprestimo_promissoria' object.pk %}">
+            <button type="button" class="btn btn-outline-warning" style="text-align:center">Promissória</button>
+        </a> 
+
+        <a href="{% url 'emprestimo:emprestimo_contrato' object.pk %}">
+            <button type="button" class="btn btn-outline-warning" style="text-align:center">Contrato</button>
+        </a> 
+
+        <form action="{% url 'emprestimo:emprestimo_impress' object.pk %}">
+            <button type="submit" >Carnê</button>
+        </form> -->
+
+            
+        
     </div>
     
 </span>
