--- a/projeto/core/templates/includes/nav.html
+++ b/projeto/core/templates/includes/nav.html
@@ -29,8 +29,8 @@ body {
 }
 
 .topnav a:hover {
-  background-color: #ddd;
-  color: black;
+  background-color: rgb(97, 97, 97);
+  color: rgb(255, 255, 255);
 }
 
 .topnav a.active {
