Botões de emprestimo com código mais limpo e sem linha ligando botões

--- a/projeto/emprestimo/templates/emprestimo_detail.html
+++ b/projeto/emprestimo/templates/emprestimo_detail.html
@@ -3,18 +3,13 @@
 {% block content %}
 
 <span class="pull-right">
-    <td style="text-align:center"> 
-        <a href="{% url 'emprestimo:emprestimo_list' %}">
-            <button type="button" class="btn btn-secondary">Voltar</button>
-        </a> 
-    </td> 
-    <td style="text-align:center"> 
-        <a href="{% url 'emprestimo:emprestimo_edit' object.pk %}">
-            <button type="button" class="btn btn-info">Editar</button>
-        </a> 
-    </td> 
-    
-    <div class="btn-group" role="group" aria-label="Basic example">
+    <div class="btn-group" >  
+        <a href="{% url 'emprestimo:emprestimo_list' %}" type="button" class="btn btn-secondary">Voltar</a>
+    </div>    
+    <div class="btn-group" >       
+        <a href="{% url 'emprestimo:emprestimo_edit' object.pk %}" type="button" class="btn btn-info">Editar</a>
+    </div>    
+    <div class="btn-group" role="group" >
         <a href="{% url 'emprestimo:emprestimo_impress' object.pk %}" type="button" class="btn btn-warning">Carnê</a>
         <a href="{% url 'emprestimo:emprestimo_promissoria' object.pk %}" type="button" class="btn btn-warning">Promissória</a>
         <a href="{% url 'emprestimo:emprestimo_contrato' object.pk %}" type="button" class="btn btn-warning">Contrato</a>
@@ -22,7 +17,6 @@
     
 </span>
 
-<a href="{% url 'emprestimo:emprestimo_list' %}">Voltar</a>
 <h1>Emprestimo Nº {{ object.num_doc }}</h1>
 
 <div class="col-sm-6">
